syntax = "proto2";
package greeting;

message Greeting {
  required string message = 1;
  optional string created = 2;
}

message GreetingRequest {
  required string name = 1;
}

message GreetingResponse {
  repeated Greeting greeting = 1;
}

service GreetingService {
  rpc Greeting(GreetingRequest) returns (GreetingResponse);
}